--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.501.0",
     "motion": "^12.7.4",
     "next": "15.2.4",
+    "openai": "^4.95.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "svix": "^1.64.1",
