--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^2.2.34",
     "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-accordion": "^1.2.7",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.8",
     "@vapi-ai/web": "^2.2.6",
