--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@clerk/nextjs": "^6.16.0",
     "@clerk/themes": "^2.2.34",
     "@google/generative-ai": "^0.24.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.8",
+    "@types/animejs": "^3.1.13",
     "@vapi-ai/web": "^2.2.6",
     "@vercel/analytics": "^1.5.0",
+    "animejs": "^4.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
